--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:label="@string/app_name" android:permission="android.permission.INTERNET" android:name="XMMS2DroidApp">
+    <application android:label="@string/app_name" android:permission="android.permission.INTERNET" android:name="XMMS2DroidApp" android:icon="@drawable/icon">
         <activity android:name="StartScreen">
             <intent-filter>
              	<action android:name="android.intent.action.MAIN" />
