--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,8 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application android:label="@string/app_name" android:permission="android.permission.INTERNET" android:name="XMMS2DroidApp" android:icon="@drawable/icon">
         <activity android:name="StartScreen">
             <intent-filter>
