--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,15 +4,15 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application android:label="@string/app_name" android:permission="android.permission.INTERNET" android:name="XMMS2DroidApp" android:icon="@drawable/icon" android:debuggable="false" android:enabled="true" android:hasCode="true">
-        <activity android:name="StartScreen" android:permission="android.permission.INTERNET">
+        <activity android:name="StartScreen">
             <intent-filter>
              	<action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.xmms2droid.ConnectedScreen" android:permission="android.permission.INTERNET"></activity>
+        <activity android:name="com.xmms2droid.ConnectedScreen"></activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest> 
