--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
 		android:hasCode="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:name="XMMS2DroidApp" >
+		android:name="XMMS2DroidApp"
+		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
 			android:label="@string/app_name"
 			android:name="XMMS2Droid" >
