--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.xmms2droid"
-	android:versionCode="3"
-	android:versionName="1.02" >
+	android:versionCode="4"
+	android:versionName="1.03" >
 	<uses-sdk
 		android:minSdkVersion="4"
 		android:targetSdkVersion="8" />
 	<application
+		android:name="XMMS2DroidApp"
 		android:debuggable="true"
 		android:enabled="true"
 		android:hasCode="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:name="XMMS2DroidApp"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
-			android:label="@string/app_name"
-			android:name="XMMS2Droid" >
-			<intent-filter >
+			android:name="XMMS2Droid"
+			android:label="@string/app_name" >
+			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<activity
-			android:label="@string/app_name"
-			android:name="com.xmms2droid.StartScreen" >
-			<intent-filter >
+			android:name="com.xmms2droid.StartScreen"
+			android:label="@string/app_name" >
+			<intent-filter>
 				<action android:name="com.xmms2droid.StartScreen" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 		<activity android:name="com.xmms2droid.ConnectedScreen" >
-			<intent-filter >
+			<intent-filter>
 				<action android:name="com.xmms2droid.ConnectedScreen" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
