--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
          which is needed when building test cases. -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application>
         <uses-library android:name="android.test.runner" />
     </application>
